# pp

./: .coveragerc  .flaskenv  .gitignore  Apteka_-_OpenAPI_Schema.yaml  README.md  app.py  commands.sql  config.py  create_tables  create_tables.sql  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 26b13a97fe1f_init.py  74e27a4366ed_remove_decimal.py  89ed1946942c_add_password.py  ccb916a3163e_changed_field_name.py
controllers/: buy_controller.py  demand_controller.py  medicine_controller.py  user_controller.py
exceptions/: errors.py
helpers/: encriptionHelper.py
pp/: __init__.py
repository/: create_db.py  models.py
services/: buy_service.py  demand_service.py  medicine_service.py  user_service.py
tests/: test_pp.py
validation_schemas/: buy_schemas.py  demand_schemas.py  medicine_schemas.py  user_schemas.py
