[tool.poetry]
name = "pp"
version = "0.1.0"
description = ""
authors = ["Vitalii Yarmus"]

[tool.poetry.dependencies]
python = "3.7.7"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = 'pp:start'
